# IMA-Assistance-Agent-RAG

./: .gitignore  2026-01-05_EXE201-slot1-Mẫu input vào rag.md  2026-01-05_EXE201-slot1_Mẫu input vào rag.json  ARCHITECTURE_PRODUCTION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_SPRINTS.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT_WORKFLOW.md  schema.md
src/iqmeet_graphrag/: __init__.py  runtime.py  service.py
src/iqmeet_graphrag/api/: __init__.py  dependencies.py  errors.py  main.py  models.py
src/iqmeet_graphrag/api/routers/: __init__.py  admin.py  cache.py  events.py  health.py  ingestion.py  meetings.py  query.py
src/iqmeet_graphrag/config/: __init__.py  llm_initializer.py  settings.py
src/iqmeet_graphrag/contracts/: __init__.py  answer.py  errors.py  events.py  query.py
src/iqmeet_graphrag/indexing/: __init__.py  graph_index.py  vector_index.py
src/iqmeet_graphrag/ingestion/: __init__.py  calibration.py  extractor.py  pipeline.py  validator.py
src/iqmeet_graphrag/observability/: __init__.py  tracing.py
src/iqmeet_graphrag/postprocessors/: __init__.py  dedup.py  temporal_label.py  temporal_rerank.py
src/iqmeet_graphrag/retrieval/: __init__.py  event_retriever.py  fusion.py  query_engine.py  router.py
src/iqmeet_graphrag/security/: __init__.py  acl.py
src/iqmeet_graphrag/workflows/: __init__.py  query_workflow.py
tests/: test_acl.py  test_api_health.py  test_api_query.py  test_citation_coverage.py  test_temporal_validator.py
