[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqmeet-agentic-temporal-graphrag"
version = "0.1.0"
description = "Agentic Temporal GraphRAG for Meeting Intelligence (local-first, LlamaIndex-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.30.0",
  "llama-index==0.14.6",
  "llama-index-vector-stores-qdrant>=0.3.0",
  "llama-index-graph-stores-neo4j>=0.3.0",
  "llama-index-embeddings-huggingface>=0.3.0",
  "llama-index-llms-ollama>=0.4.0",
  "qdrant-client>=1.11.0",
  "neo4j>=5.24.0",
  "pydantic>=2.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
