[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqmeet-agentic-temporal-graphrag"
version = "0.2.0"
description = "Agentic Temporal GraphRAG for Meeting Intelligence (local-first, LangChain-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.30.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-experimental>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-qdrant>=0.2.0",
  "litellm>=1.40.0",
  "google-cloud-aiplatform>=1.50.0",
  "google-generativeai>=0.5.0",
  "qdrant-client>=1.11.0",
  "neo4j>=5.24.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
